syntax = "proto3";
package trpc.shortvideo.user;

option go_package = "github.com/Yamon955/ShortVideo/protocol/user/pb";

message UserInfo {
    MainPageInfo main_page_info = 1; // 个人主页信息 
    int32 publish_list_count = 2;    // 作品列表总数
    int32 liked_list_count = 3;      // 赞过列表总数
    int32 collect_list_count = 4;    // 收藏列表总数
}
// 个人主页信息
message MainPageInfo {
    uint64 ID = 1;            // uid
    string username = 2;      // 用户名
    string avator = 3;        // 头像
    string sign = 4;          // 简介
    int32 gender = 5;         // 性别 0-未知 1-男 2-女
    int32 fans_count = 6;     // 粉丝数
    int32 follows_count = 7;  // 关注数
    int64 register_time = 8;  // 注册时间
}

service User {
    rpc Register(RegisterReq) returns (RegisterRsp);
    rpc Login(LoginReq) returns (LoginRsp);
    rpc BatchGetProfile(BatchGetProfileReq) returns (BatchGetProfileRsp);
    rpc SetProfile(SetProfileReq) returns (SetProfileRsp);
}

message RegisterReq {
    string username = 1;
    string password = 2;
}
message RegisterRsp {
    int64 code = 1;
    string msg = 2;
}

message LoginReq {
    string username = 1;
    string password = 2;
}
message LoginRsp {
    int64 code = 1;
    string msg = 2; 
    uint64 uid = 3;
    string token = 4;
}

enum PROFILE_TYPES {
    UNKNOW = 0;
    MAIN_PAGE_INFO = 100;      // 个人主页信息 
    PUBLISH_LIST_COUNT = 101;  // 作品列表总数
    LIKED_LIST_COUNT = 102;    // 赞过列表总数
    COLLECT_LIST_COUNT = 103;  // 收藏列表总数

    USERNAME = 200;       // 用户名
    AVATOR = 201;         // 头像
    SIGN = 202;           // 简介
    GENDER = 203;         // 性别
}

message BatchGetProfileReq {
    repeated uint64 uids = 1;
    repeated PROFILE_TYPES profileTypes = 2;
    bool disableCache = 3;
}
message BatchGetProfileRsp {
    repeated UserInfo userInfos = 1;
    repeated uint64 failedUIDs = 2;
}
message SetProfileReq {
    uint64 uid = 1;
    repeated PROFILE_TYPES profileTypes = 2;
    bool disableCache = 3;
    string username = 4;      // 用户名
    string avator = 5;        // 头像
    string sign = 6;          // 简介
    int32 gender = 7;         // 性别 0-未知 1-男 2-女

}
message SetProfileRsp {
    UserInfo userInfo = 1;
    map<int32, string> failedTypes = 2;
}